refactor: LogService의 refineLogFields() 메서드에서 로그 맵의 필드를 업데이트 하는 로직 메서드로 추출